--- a/public/index.html
+++ b/public/index.html
@@ -7,11 +7,15 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Home Automation Dashboard"
+      content="HomeOS - Smart Home Automation Dashboard"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Home Automation Dashboard</title>
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
+    />
+    <title>HomeOS - Smart Home Dashboard</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
